Revert "Fix: Full Width Container are not centered aligned [ED-21008] (#32766)"
This reverts commit db38de8ff7c564c26dececf82cb1d0c7d4267f4b.

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -175,7 +175,7 @@
 		height: 100%;
 	}
 
-	:is( .elementor-section-wrap, [data-elementor-id] ) > & {
+	:is( .elementor-section-wrap, [data-elementor-id] ):where:not( [data-elementor-type="elementor_component"] ) > & {
 		// Default top-level containers to be centered.
 		--margin-left: auto;
 		--margin-right: auto;
